--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
+        "bootstrap-vue": "^2.0.0-rc.11",
         "laravel-echo": "^1.5.2",
         "pusher-js": "^4.3.1"
     }
