--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "bootstrap-vue": "^2.0.0-rc.11",
         "laravel-echo": "^1.5.2",
-        "pusher-js": "^4.3.1"
+        "moment-timezone": "^0.5.23",
+        "pusher-js": "^4.3.1",
+        "vue-moment": "^4.0.0"
     }
 }
